namespace GarageFlow.Application.Vehicles.GetVehicleById;

public sealed record VehicleDto(
    Guid Id,
    Guid CustomerId,
    int Year,
    Guid VehicleBrandId,
    string VehicleBrandName,
    Guid VehicleModelId,
    string VehicleModelName,
    Guid VehicleColorId,
    string VehicleColorName,
    string Plate,
    DateTime CreatedAt);
